# cfgtemplater

./: .gitignore  LICENSE.txt  Pipfile  README.md  setup.cfg
cfgtemplater/: base_template.py  command_line.py  config_template.py
cfgtemplater/extensions/: ip_filters.py  ip_tests.py
examples/: ansible_ipaddr.j2  ansible_ipaddr.py  example1.j2  example2.j2  example3.j2  ip.j2
tests/: test_base_template.py  test_command_line.py  test_config_template.py  test_ip_tests.py  test_ipv4_filters.py  test_ipv6_filters.py
