[metadata]
name = cfgtemplater
version = 0.0.1
author = xv0x7c0
author_email = 13061441+xv0x7c0@users.noreply.github.com
description = A tool to generate templates based on Jinja and YAML
long_description = file: README.md
classifiers = 
  Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
  jinja2 >= 2.10
  ipaddress >= 1.0.22
  pyyaml >= 5.1

[options.entry_points]
console_scripts =
  cfgtemplater = cfgtemplater.command_line:main
